# xveco

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: static.yml
docs/: index.html  sitemap.xml
xveco/: __init__.py  core.py
